== In Git

== 0.4.4 2009-11-13

What a bad day to make a release, but here goes.

=== New features
* Cucumber should use ActiveSupport::Callbacks for fixtures (#516 Adam Salter)
* Make 'I' optional in all webrat steps. (Gavin Hughes)
* Make generated cucumber.rake work with a vendored gem (Alex Rothenberg)
* Native support for ANSIColor on IronRuby via the iron-term-ansicolor gem (Will Green)
* Call a bunch of steps from step definitions - also with tables or pystrings. Copy-paste friendly (Bodaniel Jeanes, Jack Chen, Aslak Hellesøy)

=== Bugfixes
* Pretty printer fails when expanding scenario outlines with -x when the background includes a table (#515 Mike Sassak)
* Ensure tags used with Before/After hooks always get parsed (#520 Joseph Wilk)
* Define IRONRUBY correctly on Ruby 1.9 (Joe Van Dyk)
* RbStepDefinition#invoke calls #backtrace_line on self rather than @proc (#503 Mike Sassak)
* Avoid duplicate cucumber entries in database.yml (Daniel Hofstetter)
* Added respond_to? when checking config.cache_classes for older Rails versions (Jeremy Durham)

=== Changed Features
* The code for Czech has changed from cz to cs. (deepj)
* $cucumber_interrupted is now Cucumber.wants_to_quit - avoid global variable, which gives warnings. (Aslak Hellesøy)
* Examples keyword without a colon is deprecated loudly. Gherkin will not recognize it at all. (Gherkin #30 Mike Sassak)

== 0.4.3 2009-10-28

The exciting thing about this release is that the wire protocol is starting to take shape. This means you can
now use Cucumber with .NET - writing step definitions in C#. And this is without having to use IronRuby at all!
See Cuke4Nuke (http://wiki.github.com/richardlawrence/Cuke4Nuke) for more information.

As usual there are several small features and bug fixes.

=== New Features
* Add support for ORing tags which are passed in with seperate --tag arguments. Make comma seperated tags use AND (#368 Joseph Wilk)