@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Aslak Helles\303\270y"]
-  s.date = %q{2009-11-13}
+  s.date = %q{2009-11-14}
   s.default_executable = %q{cucumber}
   s.description = %q{A BDD tool written in Ruby}
   s.email = %q{cukes@googlegroups.com}
@@ -23,7 +23,6 @@ Gem::Specification.new do |s|
      ".gitignore",
      "History.txt",
      "LICENSE",
-     "Manifest.txt",
      "README.rdoc",
      "Rakefile",
      "VERSION.yml",
