@@ -1,6 +1,4 @@
 $:.unshift(File.dirname(__FILE__) + '/../../../lib')
 require 'cucumber/rake/task'
 
-Cucumber::Rake::Task.new do |t|
-  t.cucumber_opts = %w{--language en-lol}
-end
+Cucumber::Rake::Task.new
