@@ -101,7 +101,7 @@ module Cucumber
             "Examples:",
             "cucumber examples/i18n/en/features",
             "cucumber @features.txt (See --format rerun)",
-            "cucumber --language it examples/i18n/it/features/somma.feature:6:98:113",
+            "cucumber examples/i18n/it/features/somma.feature:6:98:113",
             "cucumber -s -i http://rubyurl.com/eeCl", "", "",
           ].join("\n")
           opts.on("-r LIBRARY|DIR", "--require LIBRARY|DIR",
@@ -115,15 +115,16 @@ module Cucumber
             "This option can be specified multiple times.") do |v|
             @options[:require] << v
           end
-          opts.on("-l LANG", "--language LANG",
+          opts.on("-l LANG", "--language LANG (DEPRECATED)",
             "Specify language for features (Default: #{@options[:lang]})",
             %{Run with "--language help" to see all languages},
             %{Run with "--language LANG help" to list keywords for LANG}) do |v|
             if v == 'help'
               list_languages_and_exit
-            elsif args==['help'] # I think this conditional is just cruft and can be removed
+            elsif args==['help']
               list_keywords_and_exit(v)
             else
+              warn("\nWARNING: --language is deprecated and will be removed in version 0.5.\nSee http://wiki.github.com/aslakhellesoy/cucumber/spoken-languages")
               @options[:lang] = v
             end
           end
